--- a/amplify-chat-admin/package.json
+++ b/amplify-chat-admin/package.json
@@ -1,25 +1,78 @@
 {
   "name": "amplify-chat-admin",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Vikas Tiwari",
+  "license": "MIT",
   "description": "",
   "devDependencies": {
     "@aws-amplify/backend": "^1.2.0",
     "@aws-amplify/backend-cli": "^1.2.5",
+    "@types/aws4": "^1.11.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.16",
     "aws-cdk": "^2.155.0",
     "aws-cdk-lib": "^2.155.0",
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "tailwindcss": "^3.4.1",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "aws-amplify": "^6.5.3"
+    "@aws-amplify/ui-react": "^6.1.1",
+    "@aws-sdk/client-bedrock-runtime": "^3.554.0",
+    "@aws-sdk/client-dynamodb": "^3.556.0",
+    "@aws-sdk/client-kendra": "^3.565.0",
+    "@aws-sdk/lib-dynamodb": "^3.518.0",
+    "@dotenvx/dotenvx": "^1.12.1",
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.17.14",
+    "@types/aws-lambda": "^8.10.133",
+    "appsync-client": "^2.16.0",
+    "aws-amplify": "^6.5.3",
+    "aws-sdk": "^2.1563.0",
+    "aws4": "^1.12.0",
+    "aws4-axios": "^3.3.1",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.331.0",
+    "next": "^14.0.2",
+    "next-themes": "^0.2.1",
+    "parse-filepath": "^1.0.2",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-router-dom": "^6.21.3",
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   }
 }
