--- a/amplify-chat-ui/.gitignore
+++ b/amplify-chat-ui/.gitignore
@@ -3,3 +3,30 @@ node_modules
 .amplify
 amplify_outputs*
 amplifyconfiguration*
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.vim-arsync
