--- a/amplify-chat-ui/package.json
+++ b/amplify-chat-ui/package.json
@@ -1,13 +1,16 @@
 {
   "name": "amplify-chat-ui",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Vikas Tiwari",
+  "license": "MIT",
   "description": "",
   "devDependencies": {
     "@aws-amplify/backend": "^1.2.0",
@@ -17,9 +20,36 @@
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
     "tsx": "^4.19.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "@types/event-source-polyfill": "^1.0.3",
+    "@types/qs": "^6.9.9",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.41",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.9",
+    "vite": "^4.4.5",
+    "vite-plugin-svgr": "^4.1.0"
   },
   "dependencies": {
-    "aws-amplify": "^6.5.3"
+    "aws-amplify": "^6.5.3",
+    "@heroicons/react": "^2.1.5",
+    "axios": "^1.6.0",
+    "event-source-polyfill": "^1.0.31",
+    "marked": "^9.1.5",
+    "qs": "^6.11.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
+    "uuid": "^9.0.1"
   }
 }
